# aegis--shield

./: Aegis--shield的rational模型.mdl  ProjectHome.md  aegis-shield2.0.mpp  snort包处理流程.docx  zerocopy.vsd  ~$$流程图.~vsd  参考网站.txt  多核优化.doc  流程图.vsd  用例.docx  课程设计报告_06.12.doc  零拷贝与snort的融合方案.docx  项目申报书.doc
Application Layer Protocol Detection Module/: Classify.c  ConnectionTrack.c  ConnectionTrack.h  ParsePatterns.c  ParsePatterns.h  c_def.h  c_iterator.h  c_memory.h  c_tree.h  detect.c  list.c  list.h  snort.c
Application Layer Protocol Detection Module/output-plugins/: spo_database.c
snort改进的一些论文和阅读手札/: Snort平台下检测插件技术的研究与实现.nh  Snort检测引擎中检测算法的研究与改进.kdh  Snort检测引擎的改进与实现.nh  对网络入侵检测系统Snort的研究及改进.nh  过渡网络环境下Snort的改进研究.kdh  阅读笔记.docx
src/: CircleQueue.h  Classify.h  ConnectionTrack.c  ConnectionTrack.h  Makefile.am  Makefile.in  ParsePatterns.c  bounds.h  build.h  byte_extract.c  byte_extract.h  c_algo.h  c_function.h  c_map.h  c_pair.h  checksum.h  codes.c  codes.h  cpuclock.h  debug.c  debug.h  decode.c  decode.h  detect.c  detect.h  event.h  event_queue.c  event_queue.h  event_wrapper.c  event_wrapper.h  fpcreate.c  fpcreate.h  fpdetect.c  fpdetect.h  generators.h  inline.c  inline.h  ipv6_port.h  list.h  log.c  (+41 more)
src/detection-plugins/: Makefile.am  Makefile.in  detection_options.c  detection_options.h  sp_asn1.c  sp_asn1.h  sp_asn1_detect.c  sp_asn1_detect.h  sp_byte_check.c  sp_byte_check.h  sp_byte_jump.c  sp_byte_jump.h  sp_clientserver.c  sp_clientserver.h  sp_cvs.c  sp_cvs.h  sp_dsize_check.c  sp_dsize_check.h  sp_flowbits.c  sp_flowbits.h  sp_ftpbounce.c  sp_ftpbounce.h  sp_icmp_code_check.c  sp_icmp_code_check.h  sp_icmp_id_check.c  sp_icmp_id_check.h  sp_icmp_seq_check.c  sp_icmp_seq_check.h  sp_icmp_type_check.c  sp_icmp_type_check.h  sp_ip_fragbits.c  sp_ip_fragbits.h  sp_ip_id_check.c  sp_ip_id_check.h  sp_ip_proto.c  sp_ip_proto.h  sp_ip_same_check.c  sp_ip_same_check.h  sp_ip_tos_check.c  sp_ip_tos_check.h  (+30 more)
src/dynamic-examples/: Makefile.am  Makefile.in
src/dynamic-plugins/: Makefile.am  Makefile.in  sf_dynamic_common.h  sf_dynamic_define.h  sf_dynamic_detection.h  sf_dynamic_engine.h  sf_dynamic_meta.h  sf_dynamic_plugins.c  sf_dynamic_preprocessor.h  sp_dynamic.c  sp_dynamic.h  sp_preprocopt.c  sp_preprocopt.h
src/dynamic-plugins/sf_engine/: Makefile.am  Makefile.in  bmh.c  bmh.h  sf_snort_detection_engine.c  sf_snort_packet.h  sf_snort_plugin_api.c  sf_snort_plugin_api.h  sf_snort_plugin_byte.c  sf_snort_plugin_content.c  sf_snort_plugin_hdropts.c  sf_snort_plugin_loop.c  sf_snort_plugin_pcre.c  sf_snort_plugin_rc4.c
src/dynamic-preprocessors/: Makefile.am  Makefile.in  dynamic_preprocessors.dsp
src/dynamic-preprocessors/ssl/: Makefile.am  Makefile.in  sf_preproc_info.h  sf_ssl.dsp  spp_ssl.c  spp_ssl.h
src/nta/: control.c  control.h  sniff.c
src/output-plugins/: spo_alert_arubaaction.c  spo_alert_fast.c  spo_alert_fast.h  spo_alert_full.c  spo_alert_full.h  spo_alert_prelude.c  spo_alert_sf_socket.c  spo_alert_sf_socket.h  spo_alert_syslog.c  spo_alert_syslog.h  spo_alert_test.c  spo_alert_test.h  spo_alert_unixsock.c  spo_alert_unixsock.h  spo_csv.c  spo_csv.h  spo_database.c  spo_database.h  spo_log_ascii.c  spo_log_ascii.h  spo_log_null.c  spo_log_null.h  spo_log_tcpdump.c  spo_log_tcpdump.h  spo_unified.c  spo_unified.h  spo_unified2.c  spo_unified2.h
src/parser/: IpAddrSet.c  IpAddrSet.h
src/preprocessors/: Makefile.am  Makefile.in  perf-base.c  perf-base.h  perf-event.c  perf-event.h  perf-flow.c  perf-flow.h  perf.c  perf.h  portscan.c  portscan.h  sfprocpidstats.c  sfprocpidstats.h  snort_httpinspect.c  snort_httpinspect.h  snort_stream4_session.c  snort_stream4_session.h  snort_stream4_udp.c  snort_stream4_udp.h  spp_arpspoof.c  spp_arpspoof.h  spp_bo.c  spp_bo.h  spp_flow.c  spp_flow.h  spp_frag3.c  spp_frag3.h  spp_httpinspect.c  (+18 more)
tools/: adodb510.tgz
(+348 files in other folders)
